[workspace]
members = [
    'cpio-archive',
    'debian-packaging',
    "debian-repo-tool",
    'linux-package-analyzer',
    'pyembed-bench',
    'pyembed',
    'pyoxidizer',
    'pyoxy',
    'python-oxidized-importer',
    'python-packaging',
    'python-packed-resources',
    'release',
    'rpm-repository',
    'starlark-dialect-build-targets',
    'tugger',
    'tugger-apple',
    'tugger-binary-analysis',
    'tugger-code-signing',
    'tugger-common',
    'tugger-rust-toolchain',
    'tugger-snapcraft',
    'tugger-windows',
    'tugger-windows-codesign',
    'tugger-wix',
]
resolver = "2"
