[package]
name = "apple-bundles"
version = "0.8.0-pre"
authors = ["Gregory Szorc <gregory.szorc@gmail.com>"]
edition = "2021"
license = "MPL-2.0"
description = "Interface with Apple bundle primitives"
keywords = ["apple", "macos", "bundle", "appbundle"]
homepage = "https://github.com/indygreg/PyOxidizer"
repository = "https://github.com/indygreg/PyOxidizer.git"
readme = "README.md"

[dependencies]
anyhow = "1.0"
plist = "1.2"
walkdir = "2.3"

[dependencies.tugger-file-manifest]
version = "0.7.0"
# path = "../tugger-file-manifest"
