[package]
name = "apple-codesign"
version = "0.11.0-pre"
authors = ["Gregory Szorc <gregory.szorc@gmail.com>"]
edition = "2021"
license = "MPL-2.0"
description = "Pure Rust interface to code signing on Apple platforms"
keywords = ["tugger", "apple", "macos", "codesign"]
homepage = "https://github.com/indygreg/PyOxidizer"
repository = "https://github.com/indygreg/PyOxidizer.git"
readme = "README.md"

[[bin]]
name = "rcodesign"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
base64 = "0.13"
bcder = "0.6"
bitflags = "1.2"
bytes = "1.0"
clap = "3.1"
chrono = "0.4"
difference = "2.0"
dirs = "4.0"
duct = "0.13"
env_logger = "0.9"
goblin = "0.5"
hex = "0.4"
indoc = "1.0"
jsonwebtoken = "8"
log = "0.4"
md-5 = "0.10"
once_cell = "1.7"
p12 = "0.6"
pem = "1.0"
plist = "1.2"
rasn = "0.5"
regex = "1.5"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
ring = "0.16"
scroll = "0.11"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
tempfile = "3.3"
thiserror = "1.0"
uuid = { version = "0.8", features = ["v4"] }
which = "4.2"
xml-rs = "0.8"
yasna = "0.5"
yubikey = { version = "0.4", optional = true }
zip = "0.5"

[dependencies.apple-bundles]
path = "../apple-bundles"
version = "0.9.0-pre"

[dependencies.apple-flat-package]
path = "../apple-flat-package"
version = "0.3.0-pre"

[dependencies.apple-xar]
path = "../apple-xar"
version = "0.3.0-pre"

[dependencies.cryptographic-message-syntax]
path = "../cryptographic-message-syntax"
version = "0.14.0-pre"

[dependencies.tugger-apple]
path = "../tugger-apple"
version = "0.7.0-pre"

[dependencies.x509-certificate]
path = "../x509-certificate"
version = "0.12.0-pre"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = { version = "2.2", features = ["OSX_10_12"] }

[dev-dependencies]
indoc = "1.0"

[features]
default = ["yubikey"]
