[package]
name = "apple-codesign"
version = "0.18.0-pre"
authors = ["Gregory Szorc <gregory.szorc@gmail.com>"]
edition = "2021"
license = "MPL-2.0"
description = "Pure Rust interface to code signing on Apple platforms"
keywords = ["apple", "macos", "codesign"]
homepage = "https://github.com/indygreg/PyOxidizer"
repository = "https://github.com/indygreg/PyOxidizer.git"
readme = "README.md"

[[bin]]
name = "rcodesign"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
aws-config = "0.47"
aws-sdk-s3 = "0.17"
aws-smithy-http = "0.47"
base64 = "0.13"
bcder = "0.7"
bitflags = "1.2"
bytes = "1.0"
clap = "3.1"
chrono = "0.4"
der = "0.6"
dialoguer = "0.10"
difference = "2.0"
digest = "0.10"
dirs = "4.0"
elliptic-curve = { version = "0.12", features = ["arithmetic", "pkcs8"] }
env_logger = "0.9"
filetime = "0.2"
glob = "0.3"
goblin = "0.5"
hex = "0.4"
jsonwebtoken = "8"
log = "0.4"
md-5 = "0.10"
minicbor = { version = "0.18", features = ["derive", "std"] }
oid-registry = "0.6"
once_cell = "1.7"
p12 = "0.6"
p256 = { version = "0.11", default-features = false, features = ["arithmetic", "pkcs8", "std"] }
pem = "1.0"
pkcs1 = { version = "0.4", features = ["alloc", "std"] }
pkcs8 = { version = "0.9", features = ["alloc", "std"] }
plist = "1.2"
rand = "0.8"
rasn = "0.6"
rayon = "1.5"
regex = "1.5"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
ring = "0.16"
rsa = "0.6"
scroll = "0.11"
sha2 = "0.10"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
signature = "1.3"
spake2 = "0.3"
spki = { version = "0.6", features = ["pem"] }
subtle = "2.4"
tempfile = "3.3"
thiserror = "1.0"
tokio = { version = "1.19", features = ["rt"] }
tungstenite = { version = "0.17", features = ["rustls-tls-native-roots"] }
uuid = { version = "1.1", features = ["v4"] }
x509 = "0.2"
xml-rs = "0.8"
yasna = "0.5"
yubikey = { version = "0.6", optional = true, features = ["untested"] }
zeroize = { version = "1.3", features = ["zeroize_derive"] }
zip = { version = "0.6", default-features = false, features = ["deflate"] }
zip_structs = "0.2"

[dependencies.apple-bundles]
path = "../apple-bundles"
version = "0.14.0-pre"

[dependencies.apple-flat-package]
path = "../apple-flat-package"
version = "0.9.0-pre"

[dependencies.apple-xar]
# path = "../apple-xar"
version = "0.9.0"

[dependencies.cryptographic-message-syntax]
# path = "../cryptographic-message-syntax"
version = "0.18.0"

[dependencies.tugger-apple]
path = "../tugger-apple"
version = "0.8.0-pre"

[dependencies.tugger-file-manifest]
path = "../tugger-file-manifest"
version = "0.11.0-pre"

[dependencies.x509-certificate]
# path = "../x509-certificate"
version = "0.15.0"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = { version = "2.6", features = ["OSX_10_12"] }

[dev-dependencies]
indoc = "1.0"

[features]
default = []
smartcard = ["yubikey"]
