[package]
name = "apple-flat-package"
version = "0.4.0-pre"
authors = ["Gregory Szorc <gregory.szorc@gmail.com>"]
edition = "2021"
license = "MPL-2.0"
description = "Apple flat package (.pkg) format handling"
keywords = ["apple", "flat-package", "pkgbuild", "pkg", "productbuild"]
homepage = "https://github.com/indygreg/PyOxidizer"
repository = "https://github.com/indygreg/PyOxidizer.git"
readme = "README.md"

[dependencies]
flate2 = "1.0"
scroll = { version ="0.11", features = ["derive"] }
serde-xml-rs = "0.5"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[dependencies.apple-xar]
# path = "../apple-xar"
version = "0.3.0"

[dependencies.cpio-archive]
path = "../cpio-archive"
version = "0.4.0-pre"
