[package]
name = "apple-xar"
version = "0.1.0"
authors = ["Gregory Szorc <gregory.szorc@gmail.com>"]
edition = "2018"
license = "MPL-2.0"
description = "XAR archive reading and writing"
keywords = ["apple", "xar"]
homepage = "https://github.com/indygreg/PyOxidizer"
repository = "https://github.com/indygreg/PyOxidizer.git"
readme = "README.md"

[dependencies]
bzip2 = "0.4"
chrono = { version = "0.4", features = ["serde"] }
flate2 = "1.0"
scroll = { version = "0.11", features = ["derive"] }
serde-xml-rs = "0.5"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
xz2 = "0.1"

[dependencies.cryptographic-message-syntax]
# path = "../cryptographic-message-syntax"
version = "0.12.0"

[dependencies.x509-certificate]
# path = "../x509-certificate"
version = "0.10.0"
