[package]
name = "apple-xar"
version = "0.4.0-pre"
authors = ["Gregory Szorc <gregory.szorc@gmail.com>"]
edition = "2021"
license = "MPL-2.0"
description = "XAR archive reading and writing"
keywords = ["apple", "xar"]
homepage = "https://github.com/indygreg/PyOxidizer"
repository = "https://github.com/indygreg/PyOxidizer.git"
readme = "README.md"

[dependencies]
base64 = "0.13"
bcder = "0.6"
bzip2 = "0.4"
chrono = { version = "0.4", features = ["serde"] }
digest = "0.10"
log = "0.4"
md-5 = "0.10"
flate2 = "1.0"
rand = "0.8"
reqwest = { version = "0.11", default-features = false }
scroll = { version = "0.11", features = ["derive"] }
serde-xml-rs = "0.5"
serde = { version = "1.0", features = ["derive"] }
sha1 = "0.10"
sha2 = "0.10"
thiserror = "1.0"
url = "2.2"
xml-rs = "0.8"
xz2 = "0.1"

[dependencies.cryptographic-message-syntax]
path = "../cryptographic-message-syntax"
version = "0.15.0-pre"

[dependencies.x509-certificate]
path = "../x509-certificate"
version = "0.13.0-pre"
