[package]
name = "cpio-archive"
version = "0.1.0-pre"
authors = ["Gregory Szorc <gregory.szorc@gmail.com>"]
edition = "2018"
license = "MPL-2.0"
description = "cpio archive reading and writing"
keywords = ["cpio"]
homepage = "https://github.com/indygreg/PyOxidizer"
repository = "https://github.com/indygreg/PyOxidizer.git"
readme = "README.md"

[dependencies]
chrono = "0.4"
thiserror = "1.0"
