[package]
name = "cpio-archive"
version = "0.2.0"
authors = ["Gregory Szorc <gregory.szorc@gmail.com>"]
edition = "2021"
license = "MPL-2.0"
description = "cpio archive reading and writing"
keywords = ["cpio"]
homepage = "https://github.com/indygreg/PyOxidizer"
repository = "https://github.com/indygreg/PyOxidizer.git"
readme = "README.md"

[dependencies]
chrono = "0.4"
is_executable = "1.0"
thiserror = "1.0"

[dependencies.tugger-file-manifest]
# path = "../tugger-file-manifest"
version = "0.6.0"
