[package]
name = "cryptographic-message-syntax"
version = "0.1.0"
authors = ["Gregory Szorc <gregory.szorc@gmail.com>"]
edition = "2018"
license = "MPL-2.0"
description = "A pure Rust implementation of Crypographic Message Syntax (RFC 5652)"
keywords = ["cms", "rfc5652", "apple", "codesign"]
homepage = "https://github.com/indygreg/PyOxidizer"
repository = "https://github.com/indygreg/PyOxidizer.git"
readme = "README.md"

[dependencies]
bcder = "0.6"
bytes = "1.0"
chrono = "0.4"
pem = "0.8"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "rustls-tls"] }
ring = "0.16"
