[package]
name = "cryptographic-message-syntax"
version = "0.18.0"
authors = ["Gregory Szorc <gregory.szorc@gmail.com>"]
edition = "2021"
license = "MPL-2.0"
description = "A pure Rust implementation of Crypographic Message Syntax (RFC 5652)"
keywords = ["cms", "rfc5652", "apple", "codesign"]
homepage = "https://github.com/indygreg/PyOxidizer"
repository = "https://github.com/indygreg/PyOxidizer.git"
readme = "README.md"

[dependencies]
bcder = "0.7"
bytes = "1.0"
chrono = "0.4"
hex = "0.4"
pem = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "rustls-tls"] }
ring = "0.16"
signature = "1.3"

[dependencies.x509-certificate]
# path = "../x509-certificate"
version = "0.15.0"
features = ["test"]
