[package]
name = "debian-packaging"
version = "0.9.0-pre"
authors = ["Gregory Szorc <gregory.szorc@gmail.com>"]
edition = "2021"
license = "MPL-2.0"
description = "Debian packaging primitives"
keywords = ["debian", "package", "apt", "deb"]
homepage = "https://github.com/indygreg/PyOxidizer"
repository = "https://github.com/indygreg/PyOxidizer.git"
readme = "README.md"

[dependencies]
ar = "0.9"
async-std = "1.10"
async-trait = "0.1"
bytes = "1.1"
chrono = "0.4"
digest = "0.10"
futures = "0.3"
hex = "0.4"
libflate = "1.0"
mailparse = "0.13"
md-5 = "0.10"
once_cell = "1.8"
os_str_bytes = "6.0"
pin-project = "1.0"
pgp = "0.7"
regex = "1.5"
serde = { version = "1.0", features = ["derive"] }
sha-1 = "0.10"
sha2 = "0.10"
smallvec = "1.7"
strum = { version = "0.23", features = ["derive"] }
strum_macros = "0.23"
tar = "0.4"
thiserror = "1.0"
tokio = { version = "1.14", features = ["macros"] }
url = "2.2"
xz2 = "0.1"
zstd = "0.7"

[dependencies.async-compression]
version = "0.3"
features = ["bzip2", "futures-io", "gzip", "lzma", "xz"]

[dependencies.pgp-cleartext]
version = "0.1.0-pre"
path = "../pgp-cleartext"

[dependencies.reqwest]
version = "0.11"
optional = true
default-features = false
features = ["rustls-tls", "stream"]

[dependencies.rusoto_core]
version = "0.47"
optional = true
default-features = false
features = ["rustls"]

[dependencies.rusoto_s3]
version = "0.47"
optional = true
default-features = false
features = ["rustls"]

[dependencies.tugger-file-manifest]
version = "0.7.0-pre"
path = "../tugger-file-manifest"

[dev-dependencies]
glob = "0.3"
indoc = "1.0"

[features]
default = ["http", "s3"]
http = ["reqwest"]
s3 = ["rusoto_core", "rusoto_s3"]
