[package]
name = "debian-repo-tool"
version = "0.6.0-pre"
edition = "2021"
authors = ["Gregory Szorc <gregory.szorc@gmail.com>"]
license = "MPL-2.0"
description = "CLI tool to interact with Debian repositories"
keywords = ["debian", "package", "apt", "deb"]
homepage = "https://github.com/indygreg/PyOxidizer"
repository = "https://github.com/indygreg/PyOxidizer.git"
readme = "README.md"

[[bin]]
name = "drt"
path = "src/main.rs"

[dependencies]
clap = "3.1"
num_cpus = "1.13"
pbr = "1.0"
serde_yaml = "0.8"
thiserror = "1.0"
tokio = { version = "1.15", features = ["full"] }

[dependencies.debian-packaging]
version = "0.14.0-pre"
path = "../debian-packaging"
