[package]
name = "oxidized-importer"
version = "0.10.0-pre"
authors = ["Gregory Szorc <gregory.szorc@gmail.com>"]
edition = "2018"
license = "Python-2.0 OR MPL-2.0"
description = "A Rust-powered Python importer"
readme = "README.md"

[lib]
name = "oxidized_importer"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
lazy_static = "1.4"
libc = "0.2"
python3-sys = "0.5.2"

[dependencies.python-packed-resources]
version = "0.6.0-pre"
path = "../python-packed-resources"

[dependencies.pyembed]
version = "0.12.0-pre"
path = "../pyembed"
default-features = false
features = ["build-mode-extension-module"]

[target.'cfg(windows)'.dependencies]
memory-module-sys = "0.3"
winapi = { version = "0.3", features = ["libloaderapi", "memoryapi", "minwindef"] }
