[package]
name = "pgp-cleartext"
version = "0.1.0-pre"
edition = "2021"
authors = ["Gregory Szorc <gregory.szorc@gmail.com"]
license = "MPL-2.0"
description = "PGP cleartext framework implementation"
keywords = ["pgp", "cryptography"]
homepage = "https://github.com/indygreg/PyOxidizer"
repository = "https://github.com/indygreg/PyOxidizer.git"
readme = "README.md"

[dependencies]
chrono = "0.4"
digest = "0.10"
md-5 = "0.10"
pgp = "0.7"
sha-1 = "0.10"
sha2 = "0.10"
smallvec = "1.7"
