[package]
name = "pyembed-bench"
version = "0.1.0-pre"
authors = ["Gregory Szorc <gregory.szorc@gmail.com>"]
edition = "2018"
license = "Python-2.0 OR MPL-2.0"
description = "Benchmarks for the pyembed crate"
homepage = "https://github.com/indygreg/PyOxidizer"
repository = "https://github.com/indygreg/PyOxidizer.git"

[dependencies]
anyhow = "1.0"
once_cell = "1.8"
slog = "2.7"
tempfile = "3.2"

[dependencies.pyembed]
version = "0.18.0-pre"
path = "../pyembed"

[dependencies.pyoxidizer]
version = "0.18.0-pre"
path = "../pyoxidizer"

[dependencies.python-packaging]
version = "0.11.0-pre"
path = "../python-packaging"

[dependencies.python-packed-resources]
version = "0.8.0-pre"
path = "../python-packed-resources"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "main"
harness = false
