[package]
name = "pyembed-bench"
version = "0.1.0-pre"
authors = ["Gregory Szorc <gregory.szorc@gmail.com>"]
edition = "2021"
license = "Python-2.0 OR MPL-2.0"
description = "Benchmarks for the pyembed crate"
homepage = "https://github.com/indygreg/PyOxidizer"
repository = "https://github.com/indygreg/PyOxidizer.git"

[dependencies]
anyhow = "1.0"
once_cell = "1.8"
pyo3 = "0.14.5"
slog = "2.7"
tempfile = "3.2"
zip = "0.5"

[dependencies.pyembed]
version = "0.18.0"
path = "../pyembed"
default-features = false
features = ["zipimport"]

[dependencies.pyoxidizer]
version = "0.18.0-pre"
path = "../pyoxidizer"

[dependencies.python-oxidized-importer]
version = "0.3.0"
# path = "../python-oxidized-importer"
default-features = false
features = ["zipimport"]

[dependencies.python-packaging]
version = "0.11.0"
# path = "../python-packaging"

[dependencies.python-packed-resources]
version = "0.8.0"
# path = "../python-packed-resources"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "zip"
harness = false

[[bench]]
name = "oxidized_finder"
harness = false

[[bench]]
name = "embedded_interpreter"
harness = false
