[package]
name = "pyoxidizer"
version = "0.24.0-pre"
authors = ["Gregory Szorc <gregory.szorc@gmail.com>"]
license = "MPL-2.0"
description = "Package self-contained Python applications"
readme = "../README.md"
homepage = "https://github.com/indygreg/PyOxidizer"
repository = "https://github.com/indygreg/PyOxidizer.git"
keywords = ["python"]
edition = "2021"
build = "build.rs"

# We rename the library so we can have crate documentation for both the
# library and the binary.
[lib]
name = "pyoxidizerlib"
path = "src/lib.rs"
# The library offers no functionality that the binary doesn't and testing
# both is redundant and adds overhead. So we disable tests for the library.
test = false

[build-dependencies]
# We don't need network functionality. So disable default features which
# pull it in.
git2 = { version = "0.15", default-features = false }

[dependencies]
anyhow = "1.0"
apple-sdk = "0.2"
ar = "0.9"
cargo-lock = "8.0"
cargo_toml = "0.13"
cc = "1.0"
clap = { version = "4.0", features = ["string"] }
codemap = "0.1"
codemap-diagnostic = "0.1"
dirs = "4.0"
duct = "0.13"
env_logger = "0.9"
fs2 = "0.4"
fs_extra = "1.2"
glob = "0.3"
guppy = "0.14"
handlebars = "4.1"
hex = "0.4"
itertools = "0.10"
linked-hash-map = "0.5"
log = "0.4"
once_cell = "1.7"
path-dedot = "3.0"
pyo3-build-config = "0.17.1"
remove_dir_all = "0.7"
rustc_version = "0.4"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
simple-file-manifest = "0.11"
starlark = "0.3.1"
tar = "0.4"
tempfile = "3.2"
url = "2.2"
uuid = { version = "1.1", features = ["v4", "v5"] }
version-compare = "0.1"
walkdir = "2"
which = "4"
zstd = "0.11"

[dependencies.python-packaging]
version = "0.16.0-pre"
path = "../python-packaging"
features = ["spdx-text"]

[dependencies.python-packed-resources]
version = "0.12.0-pre"
path = "../python-packed-resources"

[dependencies.starlark-dialect-build-targets]
version = "0.8.0-pre"
path = "../starlark-dialect-build-targets"

[dependencies.tugger-binary-analysis]
version = "0.7.0-pre"
path = "../tugger-binary-analysis"

[dependencies.tugger-code-signing]
version = "0.10.0-pre"
path = "../tugger-code-signing"

[dependencies.tugger-common]
version = "0.10.0-pre"
path = "../tugger-common"

[dependencies.tugger-rust-toolchain]
version = "0.13.0-pre"
path = "../tugger-rust-toolchain"

[dependencies.tugger-windows]
version = "0.10.0-pre"
path = "../tugger-windows"

[dependencies.tugger-wix]
version = "0.16.0-pre"
path = "../tugger-wix"

[dependencies.tugger]
version = "0.18.0-pre"
path = "../tugger"

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.0"
indoc = "1.0"
predicates = "2.0"
trycmd = "0.14"
xml-rs = "0.8"

[[test]]
name = "cli_generate_python_embedding_artifacts"
harness = false
